// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on (query w/ fragment) -> mutation mutation query matches snapshot 1`] = `
"mutation MyMutation {
  addTodo {
    ...Todo_PopulateFragment_0
  }
}

fragment Todo_PopulateFragment_0 on Todo {
  ...TodoFragment
}

fragment TodoFragment on Todo {
  id
  text
}
"
`;

exports[`on (query w/ unused fragment) -> mutation mutation query matches snapshot 1`] = `
"mutation MyMutation {
  addTodo {
    ...Todo_PopulateFragment_0
  }
}

fragment Todo_PopulateFragment_0 on Todo {
  id
  text
}
"
`;

exports[`on mutation mutation query matches snapshot 1`] = `
"mutation MyMutation {
  addTodo {
    __typename
  }
}
"
`;

exports[`on query -> (mutation w/ interface return type) mutation query matches snapshot 1`] = `
"mutation MyMutation {
  removeTodo {
    ...Todo_PopulateFragment_0
    ...User_PopulateFragment_0
  }
}

fragment Todo_PopulateFragment_0 on Todo {
  id
  name
}

fragment User_PopulateFragment_0 on User {
  id
  text
}
"
`;

exports[`on query -> (mutation w/ union return type) mutation query matches snapshot 1`] = `
"mutation MyMutation {
  updateTodo {
    ...User_PopulateFragment_0
    ...Todo_PopulateFragment_0
  }
}

fragment User_PopulateFragment_0 on User {
  id
  text
}

fragment Todo_PopulateFragment_0 on Todo {
  id
  name
}
"
`;

exports[`on query -> mutation mutation query matches snapshot 1`] = `
"mutation MyMutation {
  addTodo {
    ...Todo_PopulateFragment_0
    ...Todo_PopulateFragment_1
  }
}

fragment Todo_PopulateFragment_0 on Todo {
  id
  text
  creator {
    id
    name
  }
}

fragment Todo_PopulateFragment_1 on Todo {
  text
}
"
`;

exports[`on query -> teardown -> mutation mutation query matches snapshot 1`] = `
"mutation MyMutation {
  addTodo {
    __typename
  }
}
"
`;
